--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <header>
   <h1>Инвестируйте в недвижимость в сердце Азии — Куала-Лумпур, Малайзия</h1>
   <p>Апартаменты, бунгало и земельные участки для жизни и инвестиций</p>
-  <a href="https://t.me/my_malaysia_for_you" target="_blank">Связаться в Telegram</a>
+  <a href="https://t.me/bestpropertyinmalaysia" target="_blank">Связаться в Telegram</a>
 </header>
 
 <section class="categories">
