--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Недвижимость в Куала-Лумпуре</title>
   <style>
     body { margin: 0; font-family: 'Poppins', sans-serif; background-color: #0F172A; color: #F1F5F9; }
-    header { background: url('https://1drv.ms/i/c/9159c238835b605a/EWSjNykUo4lCjm5gz3IKnrMBl1UJieMxRtjfxqjBCC7cRA?e=aUqFeX') center/cover no-repeat; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; }
+    header { background: url('https://github.com/Mixavr/Key_Malaysia/blob/main/339a880a-d2ea-4749-9d7a-8e4ac30474f3.png?raw=true') center/cover no-repeat; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; }
     header h1 { font-size: 2.5rem; margin-bottom: 1rem; }
     header p { font-size: 1.2rem; margin-bottom: 2rem; }
     header a { background: #22C55E; color: white; padding: 1rem 2rem; border-radius: 8px; text-decoration: none; font-weight: bold; }
