--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <section class="categories">
   <div class="card">
-    <img src="https://images.unsplash.com/photo-1580740572112-6471b686d2d1?auto=format&fit=crop&w=800&q=80" alt="Апартаменты">
+    <img src="DSC_0784_large.jpeg" alt="Апартаменты">
     <h3>Апартаменты</h3>
     <p>Квартиры в современных жилых комплексах.</p>
     <a href="#">Смотреть объекты</a>
