--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <section class="categories">
   <div class="card">
-    <img src="DSC_0784_large.jpeg" alt="Апартаменты">
+    <img src="https://github.com/Mixavr/Key_Malaysia/blob/main/DSC_0784_large.jpeg?raw=true" alt="Апартаменты">
     <h3>Апартаменты</h3>
     <p>Квартиры в современных жилых комплексах.</p>
     <a href="#">Смотреть объекты</a>
