--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 <section class="advantages">
   <h2>Преимущества инвестиций в Малайзию</h2>
   <ul>
-    <li>0% налог на недвижимость для нерезидентов</li>
-    <li>Вид на жительство при покупке</li>
-    <li>Рост цен на 6–10% в год</li>
+    <li>Ваш дом в стране вечного лета</li>
+    <li>Надежные инвестиции без потрясений</li>
+    <li>Для тех, кто хочет перестать читать новостные ленты</li>
     <li>Развитая инфраструктура и безопасная среда</li>
     <li>Высокий уровень жизни и международные школы</li>
   </ul>
